# src/utils/swagger/docs/swaggerDocs.json
@@ -41,6 +41,7 @@
               "description": "Invalid credentials"
             }
           }
+
         }
       },
       "/v1/register": {
@@ -81,6 +82,52 @@
         }
       },
       "/v1/authenticate":{
+        "post": {
+          "summary": "Authenticate token",
+          "description": "Use this endpoint to authenticate user.",
+          "requestBody": {
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "type":{
+                      "type":"string",
+                      "descrption":"The token type"
+                    },
+                    "token": {
+                      "type": "string",
+                      "description": "The user's token."
+                    }
+                  }
+                }
+              }
+            }
+          },
+          "responses": {
+            "201": {
+              "description": "User registered successfully"
+            },
+            "400": {
+              "description": "Invalid input data"
+            }
+          }
+        }
+      },
+      "/v1/google":{
+        "get":{
+          "summary": "Authenticate token",
+          "description": "Use this endpoint to authenticate user.",
+          "requestBody": {
+            "content": {
+              "application/json": {
+    
+              }
+            }
+          }
+        }
+      },
+      "/v1/federate/google/authenticate":{
         "post": {
           "summary": "Authenticate token",
           "description": "Use this endpoint to authenticate user.",
